Convert backend to ES modules for Vercel deployment

--- a/online/backend/package.json
+++ b/online/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zepclone-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Backend API for ZepClone grocery e-commerce",
   "main": "server.js",
   "scripts": {
